--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -41,7 +41,7 @@
 }
 
 .share-options button {
-  background-color: #28a745;
+  background-color: #a72828cf;
   color: white;
   padding: 0.65rem 1rem;
   font-size: 0.95rem;
